fixed text alignment

--- a/assets/css/simple-locator.css
+++ b/assets/css/simple-locator.css
@@ -312,6 +312,7 @@
     border-radius: 48px;
     cursor: pointer;
     outline: none;
+    text-align:center;
 }
 
 #search-button:hover {
